--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "dev": "concurrently \"npm run start\" \"npm run electron\""
+    "dev": "concurrently \"npm run start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "main": "public/main.js",
   "devDependencies": {
-    "concurrently": "^3.6.1"
+    "concurrently": "^3.6.1",
+    "wait-on": "^2.1.0"
   }
 }
